--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,10 @@ h1 {
   background-color: black;
   color: white;
 }
+
+#bloque {
+  background-color: red;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
